# nn

./: .bazelignore  .bazelrc  MODULE.bazel  README.md
makemore/: BUILD  makemore.cc
micrograd/: BUILD  README.md  demo_input.json  micrograd.cc  micrograd.h  micrograd_test.cc  nn.cc  nn.h  nn_demo.cc
