module(
    name = "nn",
    repo_name = "com_github_rockwotj_nn",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "5bcb0bd8a917b2b48fb5dc55818515f4be3b63ff",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

bazel_dep(name = "googletest", version = "1.14.0")
bazel_dep(name = "abseil-cpp", version = "20240116.1")
bazel_dep(name = "google_benchmark", version = "1.8.3")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")

http_archive(
    name = "pytorch",
    build_file = "@//thirdparty:libtorch.BUILD",
    sha256 = "8e1c41735651aabf9a85ced6788633175a4fa4c3d419066a06a927f026dfb118",
    strip_prefix = "libtorch",
    urls = ["https://download.pytorch.org/libtorch/cu121/libtorch-cxx11-abi-shared-with-deps-2.2.2%2Bcu121.zip"],
)

http_archive(
    name = "plot",
    build_file = "@//thirdparty:plot.BUILD",
    integrity = "sha256-bxoPryr8nNKUFtNe1boTnF/CDNYYgEpkkUK8CezJxrQ=",
    strip_prefix = "plot-02da3742a5eab1eab850b98dfeb6af56e44655d5",
    urls = ["https://github.com/fbbdev/plot/archive/02da3742a5eab1eab850b98dfeb6af56e44655d5.zip"],
)

# TODO: Build pytorch from scratch so that we can use libc++
# bazel_dep(name = "toolchains_llvm", version = "1.0.0")
# llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
# llvm.toolchain(llvm_version = "17.0.6")
# use_repo(llvm, "llvm_toolchain")
# register_toolchains("@llvm_toolchain//:all")
